# planet-order

./: .gitignore  CHANGELOG.md  CONTRIBUTE.md  README.md  Untitled.ipynb  about_ui.ipynb  aoi_selector_ui.ipynb  build-environment.yml  download_ui.ipynb  environment.yml  explorer_ui.ipynb  map_ui.ipynb  no_ui.ipynb  parameters.py.dist  planet.key.dist.txt  pyproject.toml  requirements.txt  sepal_environment.yml  ui.ipynb  ui_legacy.ipynb
.github/workflows/: ci.yaml  deploy.yml
component/io/: __init__.py  order_io.py
component/message/: en.json  test_translation.ipynb
component/message/en/: aoi_control.json  down_control.json  dynamic_select.json  locale.json
component/model/: __init__.py  order_model.py
component/parameter/: __init__.py  directory.py  files.py  planet.py
component/scripts/: __init__.py  mapping.py  planet.py
component/tile/: __init__.py  aoi_control.py  color_control.py  down_control.py  download_tile.py  explorer_tile.py  map_tile.py  order_control.py  order_tile.py  planet_control.py  result_tile.py  viz_tile.py
component/widget/: __init__.py  api_key.py  down_map.py  dynamic_select.py
doc/: en.rst  es.rst  fr.rst
scripts/: messages.py  parameter.py  planet.py
utils/: ABOUT.md  Untitled.ipynb
